--- a/utils/templates/utils/password_reset.html
+++ b/utils/templates/utils/password_reset.html
@@ -11,27 +11,17 @@
             margin: 0 auto;
             padding: 20px;
         }
-        .button {
-            display: inline-block;
-            padding: 10px 20px;
-            background-color: #007bff;
-            color: #ffffff;
-            text-decoration: none;
-            border-radius: 5px;
-        }
     </style>
     <title>Password Reset</title>
 </head>
 <body>
     <div class="container">
-        <h2>Password Reset for Nanocodes</h2>
-        <p>Dear {{ name }},</p>
-        <p>You recently requested a password reset for your Nanocodes account. Use the following OTP code to reset your password:</p>
-        <p><i>It expires in {{expiration_time}} min(s)</i></p>
-        <p class="otp-code">{{ otp_code }}</p>
-        <p><a href="{{verification_link}}">Verify OTP</a></p>
-        <p>If you didn't request this, you can safely ignore this message.</p>
-        <p>Best regards,<br>The Nanocodes Team</p>
+        <h2>Password Reset for MS Network</h2>
+        <p>Dear user {{ name }},</p>
+        <p>Your password has been reseted and this is your temoplary password. <strong>{{password}}</strong></p>
+        <p>Login and change it</p>
+
+        <p>Best regards,<br>MS Network</p>
     </div>
 </body>
 </html>
