--- a/utils/templates/utils/signup.html
+++ b/utils/templates/utils/signup.html
@@ -23,12 +23,13 @@
 </head>
 <body>
     <div class="container">
-        <h2>Welcome to Andromeda !</h2>
-        <p>Dear {{ name }},</p>
-        <p>We're thrilled to have you as part of our community. Your company {{company_name}} has been successfully created.</p>
-        <p>To get started, you can explore all the amazing features of our app. If you have any questions or need assistance, don't hesitate to reach out.</p>
-        <p>We're looking forward to an exciting journey together!</p>
-        <p>Best regards,<br>The Andromeda Team</p>
+        <h2>Welcome to MS Network !</h2>
+        <p>Dear user {{ data.username }},</p>
+        <p>We're thrilled to have you as part of our community. Your account has been successfully created.</p>
+        <p>To get started, you can Login and change your password..</p>
+        <p>Below are your login details</p>
+        <p>{{data}}</p>
+        <p>Best regards,<br>The MS Network Team</p>
     </div>
 </body>
 </html>
