--- a/utils/templates/utils/signup.html
+++ b/utils/templates/utils/signup.html
@@ -10,6 +10,15 @@
             margin: 0 auto;
             padding: 20px;
         }
+        .flex{
+            display: flex;
+        }
+        .p{
+            padding: 10px;
+        }
+        .m{
+            margin: 5px;
+        }
         .button {
             display: inline-block;
             padding: 10px 20px;
@@ -28,7 +37,24 @@
         <p>We're thrilled to have you as part of our community. Your account has been successfully created.</p>
         <p>To get started, you can Login and change your password..</p>
         <p>Below are your login details</p>
-        <p>{{data}}</p>
+        <div class="">
+            <div class="flex">
+                <div class="m p">Email :</div>
+                <div class="m p">{{data.email}}</div>
+            </div>
+            <div class="flex">
+                <div class="m p">Password :</div>
+                <div class="m p">{{data.password}}</div>
+            </div>
+            <div class="flex">
+                <div class="m p">Username :</div>
+                <div class="m p">{{data.username}}</div>
+            </div>
+            <div class="flex">
+                <div class="m p">Phone :</div>
+                <div class="m p">{{data.phone_number}}</div>
+            </div>
+        </div>
         <p>Best regards,<br>The MS Network Team</p>
     </div>
 </body>
